set default button background to fix bug on iOS

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -16,4 +16,5 @@ body {
 
   button {
     color: black;
+    background-color:aliceblue;
   }
